--- a/simple_vocabulary/Podfile
+++ b/simple_vocabulary/Podfile
@@ -2,7 +2,7 @@ target 'simple_vocabulary' do
 source 'https://github.com/CocoaPods/Specs.git'
 platform :ios, '8.0'
 pod 'AFNetworking'
-pod 'MagicalRecord', '2.2'
+pod 'MagicalRecord'
 
 end
 
